--- a/documentation/upstream-site/de/impressum.html
+++ b/documentation/upstream-site/de/impressum.html
@@ -63,7 +63,7 @@ Carsten Gnörlich (Anschrift wie oben).
 Das Impressum gilt für die Internetpräsenz unter den Domänen<br>
 <a href="http://dvdisaster.com">dvdisaster.com</a>, &nbsp;
 <a href="http://dvdisaster.de">dvdisaster.de</a>, &nbsp;
-<a href="http://dvdisaster.net">dvdisaster.net</a>, &nbsp;
+<a href="https://web.archive.org/web/20180428070843/http://dvdisaster.net">dvdisaster.net</a>, &nbsp;
 <a href="http://dvdisaster.org">dvdisaster.org</a>.
 
 <!-- Page footer -->
